phase2_Dev/src/objects/FormVersion__c.object
<CustomObject>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to determine the archival status of the form version.</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Form that this Form Version belongs to.</description>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Versions</relationshipLabel>
        <relationshipName>FormVersions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>